# smol-opyt

./: .bumpversion.cfg  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  setup.cfg  sonar-project.properties
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml
docs/: Makefile  conf.py  index.rst  make.bat
smol_opyt/: __init__.py  logistic_problem.py  metrics.py  my_module.py
tests/: test_my_module.py  test_smol_opyt.py
